[patch] tooltips no longer wrap on whitespace

--- a/src/style/_tooltip.scss
+++ b/src/style/_tooltip.scss
@@ -13,6 +13,7 @@
   line-height: 1.3;
   word-wrap: break-word;
   overflow-wrap: break-word;
+  white-space: nowrap;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
